--- a/packages/core/src/scss/components/spacing/_style.scss
+++ b/packages/core/src/scss/components/spacing/_style.scss
@@ -6,6 +6,8 @@
 [class]:is(
   [class*="__inner-container"],
   .wp-block-column,
+  .wp-block-query,
+  .wp-block-post-content,
   .block-editor-block-list__layout,
   .widget,
   .nb-list,
