--- a/packages/core/src/style.scss
+++ b/packages/core/src/style.scss
@@ -43,6 +43,8 @@
 
 :is(
   .is-root-container,
+  .wp-block-query,
+  .wp-block-post-content,
   .nb-content-layout-grid,
   .nb-sidecar,
   .nb-sidecar-area--content
